--- a/templates/Home.html
+++ b/templates/Home.html
@@ -1,15 +1,14 @@
 {% extends "BASE.html" %}
     {% block content %}
-        <h1>Home Page</h1>
-            {% for post in posts %}
-            <h1>
-                {{post.title}}
-            </h1>
-            <h3>
-                by {{post.author}} on {{post.date}}
-            </h3>
-            <p>
-                {{post.content}}
-            </p>
+        {% for post in posts %}
+            <div class="card mb-3">
+              <img src="..." class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">{{ post.title }}</h5>
+                <p class="card-text">{{ post.content }}</p>
+                  <a href="#" class="btn btn-dark">Read More</a>
+                <p class="card-text"><small class="text-muted">by {{ post.author }}</small></p>
+              </div>
+            </div>
         {% endfor %}
     {% endblock content %}
