--- a/templates/BASE.html
+++ b/templates/BASE.html
@@ -17,10 +17,10 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item active">
-                    <a class="nav-link" href="#">Articles <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{{ url_for('homePage') }}">Articles <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="{{ url_for('aboutPage') }}">About</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Links</a>
@@ -29,6 +29,15 @@
               </div>
             </nav>
             <br>
+            {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                    {% for category, message in messages %}
+                        <div class="alert alert-{{ category }}">
+                            {{ message }}
+                        </div>
+                    {% endfor %}
+                {% endif %}
+            {% endwith %}
 
             {% block content %}
 
