--- a/templates/BASE.html
+++ b/templates/BASE.html
@@ -26,6 +26,14 @@
                     <a class="nav-link" href="#">Links</a>
                   </li>
                 </ul>
+                  <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('loginPage') }}">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('registerPage') }}">Register</a>
+                    </li>
+                  </ul>
               </div>
             </nav>
             <br>
