--- a/templates/BASE.html
+++ b/templates/BASE.html
@@ -10,7 +10,7 @@
     <body>
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-              <a class="navbar-brand" href="#">Bad Ideas On Bikes</a>
+              <a class="navbar-brand" href="{{ url_for('homePage') }}">Bad Ideas On Bikes</a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
