--- a/templates/Home.html
+++ b/templates/Home.html
@@ -2,7 +2,7 @@
     {% block content %}
         {% for post in posts %}
             <div class="card mb-3">
-              <img src="..." class="card-img-top" alt="...">
+              <img src="{{ post.image }}" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">{{ post.title }}</h5>
                 <p class="card-text">{{ post.content }}</p>
