--- a/flaskbiob/templates/BASE.html
+++ b/flaskbiob/templates/BASE.html
@@ -16,23 +16,32 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                  <li class="nav-item active">
+                  <li class="nav-item {% if request.endpoint == 'homePage' %} active {% endif %}">
                     <a class="nav-link" href="{{ url_for('homePage') }}">Articles <span class="sr-only">(current)</span></a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item {% if request.endpoint == 'aboutPage' %} active {% endif %}">
                     <a class="nav-link" href="{{ url_for('aboutPage') }}">About</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item {% if request.endpoint == 'linkPage' %} active {% endif %}">
                     <a class="nav-link" href="#">Links</a>
                   </li>
                 </ul>
                   <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('loginPage') }}">Login</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('registerPage') }}">Register</a>
-                    </li>
+                      {% if current_user.is_authenticated %}
+                          <li class="nav-item ">
+                            <a class="nav-link" href="{{ url_for('logoutPage') }}">Logout</a>
+                        </li>
+                        <li class="nav-item {% if request.endpoint == 'accountPage' %} active {% endif %}">
+                            <a class="nav-link" href="{{ url_for('accountPage') }}">Account</a>
+                        </li>
+                      {% else %}
+                        <li class="nav-item {% if request.endpoint == 'loginPage' %} active {% endif %}">
+                            <a class="nav-link" href="{{ url_for('loginPage') }}">Login</a>
+                        </li>
+                        <li class="nav-item {% if request.endpoint == 'registerPage' %} active {% endif %}">
+                            <a class="nav-link" href="{{ url_for('registerPage') }}">Register</a>
+                        </li>
+                      {% endif %}
                   </ul>
               </div>
             </nav>
