Working on CRUD for posts

--- a/flaskbiob/templates/BASE.html
+++ b/flaskbiob/templates/BASE.html
@@ -30,6 +30,9 @@
                 </ul>
                   <ul class="navbar-nav ml-auto">
                       {% if current_user.is_authenticated %}
+                        <li class="nav-item {% if request.endpoint == 'newpostPage' %} active {% endif %}">
+                            <a class="nav-link" href="{{ url_for('newpostPage') }}">Post</a>
+                        </li>
                           <li class="nav-item ">
                             <a class="nav-link" href="{{ url_for('logoutPage') }}">Logout</a>
                         </li>
