--- a/flaskbiob/templates/Edit_Post.html
+++ b/flaskbiob/templates/Edit_Post.html
@@ -1,7 +1,7 @@
 {% extends "BASE.html" %}
 {% block content %}
     <div class="content-section">
-        <form method="POST" action="">
+        <form method="POST" action="" enctype="multipart/form-data">
             {{form.hidden_tag() }}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">
@@ -22,6 +22,20 @@
                     {% endif %}
                 </div>
                 <div class="form-group">
+                    {{ form.leader.label(class="form-control-label") }}
+
+                    {% if form.content.errors %}
+                        {{ form.leader(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                            {% for error in form.leader.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.leader(class="form-control form-control-lg") }}
+                    {% endif %}
+                </div>
+                <div class="form-group">
                     {{ form.content.label(class="form-control-label") }}
 
                     {% if form.content.errors %}
@@ -35,6 +49,15 @@
                         {{ form.content(class="form-control form-control-lg") }}
                     {% endif %}
                 </div>
+                <div class="form-group">
+                        {{ form.post_image.label() }}
+                        {{ form.post_image(class="form-control-file") }}
+                        {% if form.post_image.errors %}
+                            {% for error in form.post_image.errors %}
+                        <span class="text-danger">{{ error }}</span><br>
+                            {% endfor %}
+                        {% endif %}
+                    </div>
             </fieldset>
                 <div class="form-group">
                     {{form.submit(class="btn btn-outline-info")}}
