--- a/flaskbiob/templates/Post.html
+++ b/flaskbiob/templates/Post.html
@@ -13,6 +13,28 @@
             </div>
     {% if current_user.is_authenticated %}
         <a href="{{ url_for('updatepostPage', post_id=post.id) }}" class="btn btn-dark" role="button">Edit</a>
-        <a href="#" class="btn btn-dark" role="button">Delete</a>
+        <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#deleteModal"=>Delete</button>
+        <!-- Modal -->
+        <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="deleteModalLabel">Delete post</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                Are you sure you want to delete this post?
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <form action="{{ url_for('delete_post', post_id=post.id) }}" method="POST">
+                    <input class="btn btn-danger" type="submit" value="Delete">
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
     {% endif %}
     {% endblock content %}
