--- a/flaskbiob/templates/Post.html
+++ b/flaskbiob/templates/Post.html
@@ -1,19 +1,22 @@
 {% extends "BASE.html" %}
     {% block content %}
-            <div class="blog-post">
-              <img src="{{ url_for('static', filename='post_pics/' + post.post_image) }}" class="card-img-top" alt="...">
-
-                <h5>{{ post.title }}</h5>
-                <p class="card-text">{{ post.leader }}</p>
-                <hr>
-                  <p class="card-text">{{ post.content }}</p>
-                <p>{{ post.id }}</p>
-                <p class="card-text"><small class="text-muted">by {{ post.author.username }}</small></p>
-                <hr>
-            </div>
-    {% if current_user.is_authenticated %}
+    <div class="container">
+        <div class="row">
+            <div class="column mx-auto" style="width: 1200px">
+                        <img src="{{ url_for('static', filename='post_pics/' + post.post_image) }}" class="img-fluid" alt="Responsive image">
+                <div class="border">
+                    <div class="column m-4">
+                        <h4>{{ post.title }}</h4>
+                        <p class="lead">{{ post.leader }}</p>
+                        <hr>
+                        <p>{{ post.content | safe }}</p>
+                        <hr>
+                        <small class="text-muted">by {{ post.author.username }}</small>
+                    </div>
+                </div>
+                    {% if current_user.is_authenticated %}
         <a href="{{ url_for('updatepostPage', post_id=post.id) }}" class="btn btn-dark" role="button">Edit</a>
-        <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#deleteModal"=>Delete</button>
+        <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#deleteModal">Delete</button>
         <!-- Modal -->
         <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
           <div class="modal-dialog" role="document">
@@ -37,4 +40,7 @@
           </div>
         </div>
     {% endif %}
+            </div>
+        </div>
+    </div>
     {% endblock content %}
