--- a/flaskbiob/static/main.css
+++ b/flaskbiob/static/main.css
@@ -1,7 +1,6 @@
 body {
   background: #fafafa;
   color: #333333;
-  margin-top: 5rem;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -77,4 +76,12 @@ a.article-title:hover {
 
 .account-heading {
   font-size: 2.5rem;
+}
+
+#footer{
+background-color: #292b2c;
+}
+
+.footer-text{
+  color: #f7f7f7;
 }
