--- a/flaskbiob/templates/Home.html
+++ b/flaskbiob/templates/Home.html
@@ -14,7 +14,7 @@
             </div>
             {% endfor %}
         </div>
-        <div class="col-4 order-2 px-5 border-left d-none d-lg-block" id="sticky-sidebar">
+        <div class="col-4 order-2 px-5 border-left d-none d-lg-block pb-3" id="sticky-sidebar">
             <div class="sticky-top">
                 <h5>My name is Joe and I’m obsessed with riding bikes</h5>
                 <hr>
