--- a/flaskbiob/templates/BASE.html
+++ b/flaskbiob/templates/BASE.html
@@ -65,15 +65,15 @@
 
             {% endblock content %}
             <div class="row border-top p-4" id="footer">
-                <div class="column"><p class="footer-text m-2">© Copyright Bad Ideas on Bikes - 2020</p></div>
-                <div class="column offset-md-2">
+                <div class="col-4"><p class="footer-text m-2">© Copyright Bad Ideas on Bikes - 2020</p></div>
+                <div class="col-4">
                     <ul class="footer-list m-2">
                         <li class="mb-3"><a class="text-light" href="{{ url_for('homePage') }}">Articles</a></li>
                         <li class="mb-3"><a class="text-light" href="{{ url_for('aboutPage') }}">About</a></li>
                         <li class="mb-3"><a class="text-light" href="">Links</a></li>
                     </ul>
                 </div>
-                <div class="column offset-md-3">
+                <div class="col-4">
                     <a href="" class="image-link-gs"><img src="{{ url_for('static', filename='icons/strava.png') }}" class="button-icon m-2"></a>
                     <a href="" class="image-link-gs"><img src="{{ url_for('static', filename='icons/RWGPS.png') }}" class="button-icon m-2"></a>
                     <a href="" class="image-link-gs"><img src="{{ url_for('static', filename='icons/small_instagram.png') }}" class="button-icon m-2"></a>
