--- a/flaskbiob/templates/Reset_Request.html
+++ b/flaskbiob/templates/Reset_Request.html
@@ -1,14 +1,14 @@
 {% extends "BASE.html" %}
 {% block content %}
     <h1>
-        Login
+        Reset Password
     </h1>
     <div class="content-section">
         <form method="POST" action="">
             {{form.hidden_tag() }}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">
-                    Please log in
+                    Enter your email to reset password
                 </legend>
                 <div class="form-group">
                     {{ form.email.label(class="form-control-label") }}
@@ -24,31 +24,10 @@
                         {{ form.email(class="form-control form-control-lg") }}
                     {% endif %}
                 </div>
-                <div class="form-group">
-                    {{ form.password.label(class="form-control-label") }}
-
-                    {% if form.password.errors %}
-                        {{ form.password(class="form-control form-control-lg is-invalid") }}
-                        <div class="invalid-feedback">
-                            {% for error in form.password.errors %}
-                                <span>{{ error }}</span>
-                            {% endfor %}
-                        </div>
-                    {% else %}
-                        {{ form.password(class="form-control form-control-lg") }}
-                    {% endif %}
-                </div>
-                <div class="form-check">
-                    {{ form.remember(class="form-check-input") }}
-                    {{ form.remember.label(class="form-check-label") }}
-                </div>
             </fieldset>
                 <div class="form-group">
                     {{form.submit(class="btn btn-outline-info")}}
                 </div>
-                <small class="text-muted ml-2">
-                    <a href="{{ url_for('resetrequestPage') }}">Forgot password?</a>
-                </small>
         </form>
     </div>
     <div class="border-top pt-3">
