--- a/flaskbiob/templates/Register.html
+++ b/flaskbiob/templates/Register.html
@@ -73,6 +73,6 @@
         </form>
     </div>
     <div class="border-top pt-3">
-        Already have an account? <a class="ml-2" href="{{ url_for('loginPage') }}">Sign in</a>
+        Already have an account? <a class="ml-2" href="{{ url_for('users.loginPage') }}">Sign in</a>
     </div>
 {% endblock content %}
