--- a/flaskbiob/templates/Reset_Token.html
+++ b/flaskbiob/templates/Reset_Token.html
@@ -45,6 +45,6 @@
         </form>
     </div>
     <div class="border-top pt-3">
-        Need an account? <a class="ml-2" href="{{ url_for('registerPage') }}">Sign up now!</a>
+        Need an account? <a class="ml-2" href="{{ url_for('users.registerPage') }}">Sign up now!</a>
     </div>
 {% endblock content %}
