--- a/flaskbiob/templates/Post.html
+++ b/flaskbiob/templates/Post.html
@@ -11,11 +11,11 @@
                         <hr>
                         <p>{{ post.content | safe }}</p>
                         <hr>
-                        <small class="text-muted">by <a href="{{ url_for('userpostPage', username=post.author.username) }}">{{ post.author.username }}</a></small>
+                        <small class="text-muted">by <a href="{{ url_for('users.userpostPage', username=post.author.username) }}">{{ post.author.username }}</a></small>
                     </div>
                 </div>
                     {% if current_user.is_authenticated %}
-        <a href="{{ url_for('updatepostPage', post_id=post.id) }}" class="btn btn-dark" role="button">Edit</a>
+        <a href="{{ url_for('posts.updatepostPage', post_id=post.id) }}" class="btn btn-dark" role="button">Edit</a>
         <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#deleteModal">Delete</button>
         <!-- Modal -->
         <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
@@ -32,7 +32,7 @@
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <form action="{{ url_for('delete_post', post_id=post.id) }}" method="POST">
+                <form action="{{ url_for('posts.delete_post', post_id=post.id) }}" method="POST">
                     <input class="btn btn-danger" type="submit" value="Delete">
                 </form>
               </div>
