--- a/flaskbiob/templates/Edit_Post.html
+++ b/flaskbiob/templates/Edit_Post.html
@@ -64,4 +64,34 @@
                 </div>
         </form>
     </div>
+
+    <script type="text/javascript" src="{{ url_for('static', filename='tinymce/tinymce.min.js') }}"></script>
+    <script type="text/javascript">
+        tinymce.init({
+            selector: '#content',
+            plugins: [
+                'advlist autolink link image imagetools lists charmap print preview hr anchor pagebreak spellchecker',
+                'searchreplace wordcount visualblocks visualchars code fullscreen insertdatetime media nonbreaking',
+                'save table contextmenu directionality template paste textcolor codesample'
+            ],
+            imagetools_toolbar: "rotateleft rotateright | flipv fliph | editimage imageoptions",
+            toolbar: 'insertfile undo redo | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link image | print preview media fullpage | forecolor backcolor emoticons | codesample',
+            images_upload_url: '{{ url_for('posts.imageuploader') }}',
+            automatic_uploads: true,
+            image_advtab: true,
+            image_title: true,
+            images_reuse_filename: false,
+            image_caption: true,
+            images_upload_base_path: '/static/post_pics',
+            relative_urls: false,
+            codesample_languages: [
+                { text: 'HTML/XML', value: 'markup' },
+                { text: 'JavaScript', value: 'javascript' },
+                { text: 'CSS', value: 'css' },
+                { text: 'Processing', value: 'processing' },
+                { text: 'Python', value: 'python' }
+            ],
+            width: "100%",
+        });
+    </script>
 {% endblock content %}
