really minor changes on footer, needs a total overhall

--- a/flaskbiob/templates/BASE.html
+++ b/flaskbiob/templates/BASE.html
@@ -64,19 +64,22 @@
             {% block content %}
 
             {% endblock content %}
-            <div class="row border-top p-4" id="footer">
-                <div class="col-4"><p class="footer-text m-2">© Copyright Bad Ideas on Bikes - 2020</p></div>
-                <div class="col-4">
-                    <ul class="footer-list m-2">
+            <div class="row mx-auto" id="footer">
+                <div class="col-4 my-auto"><p class="footer-text m-2 text-center">© Copyright Bad Ideas on Bikes - 2020</p></div>
+                <div class="col-4 my-auto">
+                    <h6>Pages</h6>
+                    <ul class="footer-list m-2 text-center">
                         <li class="mb-3"><a class="text-light" href="{{ url_for('main.homePage') }}">Articles</a></li>
                         <li class="mb-3"><a class="text-light" href="{{ url_for('main.aboutPage') }}">About</a></li>
+                        <li class="mb-3"><a class="text-light" href="">Routes</a></li>
                         <li class="mb-3"><a class="text-light" href="">Links</a></li>
                     </ul>
                 </div>
-                <div class="col-4">
-                    <a href="" class="image-link-gs"><img src="{{ url_for('static', filename='icons/strava.png') }}" class="button-icon m-2"></a>
-                    <a href="" class="image-link-gs"><img src="{{ url_for('static', filename='icons/RWGPS.png') }}" class="button-icon m-2"></a>
-                    <a href="" class="image-link-gs"><img src="{{ url_for('static', filename='icons/small_instagram.png') }}" class="button-icon m-2"></a>
+                <div class="col-4 my-auto">
+                    <h6>Social</h6>
+                    <a href="" class="image-link-gs mr-4"><img src="{{ url_for('static', filename='icons/strava.png') }}" class="button-icon"></a>
+                    <a href="" class="image-link-gs mr-4"><img src="{{ url_for('static', filename='icons/RWGPS.png') }}" class="button-icon"></a>
+                    <a href="" class="image-link-gs"><img src="{{ url_for('static', filename='icons/small_instagram.png') }}" class="button-icon"></a>
                 </div>
             </div>
 
