Didn't work on footer and tried to stop pages moving to left or right but failed... can't work out why

--- a/flaskbiob/templates/About.html
+++ b/flaskbiob/templates/About.html
@@ -1,6 +1,9 @@
 {% extends "BASE.html" %}
 {% block content %}
-    <h1>
-        About Page
-    </h1>
+                <div class="border mb-4">
+                    <div class="column p-4">
+                        <h1>About Bad Ideas on Bikes</h1>
+                        <p class="lead">Here's some info about me...</p>
+                    </div>
+                </div>
 {% endblock content %}
