--- a/flaskbiob/templates/Post.html
+++ b/flaskbiob/templates/Post.html
@@ -1,8 +1,8 @@
 {% extends "BASE.html" %}
     {% block content %}
-                        <img src="{{ url_for('static', filename='post_pics/' + post.post_image) }}" class="img-fluid" alt="Responsive image">
+        <img src="{{ url_for('static', filename='post_pics/' + post.post_image) }}" class="img-fluid" alt="Responsive image">
                 <div class="border">
-                    <div class="column m-4">
+                    <div class="column p-4">
                         <h4>{{ post.title }}</h4>
                         <p class="lead">{{ post.leader }}</p>
                         <hr>
@@ -11,7 +11,7 @@
                         <small class="text-muted">by <a href="{{ url_for('users.userpostPage', username=post.author.username) }}">{{ post.author.username }}</a></small>
                     </div>
                 </div>
-                    {% if current_user.is_authenticated %}
+    {% if current_user.is_authenticated %}
         <a href="{{ url_for('posts.updatepostPage', post_id=post.id) }}" class="btn btn-dark" role="button">Edit</a>
         <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#deleteModal">Delete</button>
         <!-- Modal -->
