--- a/flaskbiob/templates/BASE.html
+++ b/flaskbiob/templates/BASE.html
@@ -10,8 +10,8 @@
     <title>Bad Ideas on Bikes</title>
 </head>
     <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-custom mb-4">
         <div class="container">
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
               <a class="navbar-brand" href="{{ url_for('main.homePage') }}">Bad Ideas On Bikes</a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -52,7 +52,9 @@
                       {% endif %}
                   </ul>
               </div>
-            </nav>
+        </div>
+    </nav>
+    <div class="container">
             {% with messages = get_flashed_messages(with_categories=true) %}
                 {% if messages %}
                     {% for category, message in messages %}
@@ -67,25 +69,39 @@
 
             {% endblock content %}
 
-
-            <div class="row mx-auto" id="footer">
-                <div class="col-4 my-auto"><p class="footer-text m-2 text-center">© Copyright Bad Ideas on Bikes - 2020</p></div>
-                <div class="col-4 my-auto">
-                    <h6>Pages</h6>
-                    <ul class="footer-list m-2 text-center">
-                        <li class="mb-3"><a class="text-light" href="{{ url_for('main.homePage') }}">Articles</a></li>
-                        <li class="mb-3"><a class="text-light" href="{{ url_for('main.aboutPage') }}">About</a></li>
-                        <li class="mb-3"><a class="text-light" href="">Routes</a></li>
-                        <li class="mb-3"><a class="text-light" href="">Links</a></li>
-                    </ul>
+    </div>
+        <div class="row">
+            <div class="container-fluid border-top" id="footer">
+                <div class="row footer-links text-center mt-2">
+                    <div class="col-md-2"></div>
+                    <div class="col-md-8 border-bottom bdrbottom pb-3">
+                        <h6 class="text-center">Pages</h6>
+                        <a class="text-light text-decoration-none mr-2" href="{{ url_for('main.homePage') }}">Articles</a>
+                        <a class="text-light text-decoration-none mr-2" href="{{ url_for('main.aboutPage') }}">About</a>
+                        <a class="text-light text-decoration-none mr-2" href="">Routes</a>
+                        <a class="text-light" href="">Links</a>
+                    </div>
+                    <div class="col-md-2"></div>
                 </div>
-                <div class="col-4 my-auto">
-                    <h6>Social</h6>
-                    <a href="" class="image-link-gs mr-4"><img src="{{ url_for('static', filename='icons/strava.png') }}" class="button-icon"></a>
-                    <a href="" class="image-link-gs mr-4"><img src="{{ url_for('static', filename='icons/RWGPS.png') }}" class="button-icon"></a>
-                    <a href="" class="image-link-gs"><img src="{{ url_for('static', filename='icons/small_instagram.png') }}" class="button-icon"></a>
+                <div class="row mt-2">
+                    <div class="col-md-2"></div>
+                    <div class="col-md-8 border-bottom bdrbottom pb-3">
+                        <div><h6 class="text-center">Social</h6></div>
+                        <div class="d-flex justify-content-center">
+                            <a href="" class="image-link-gs mr-4"><img src="{{ url_for('static', filename='icons/strava.png') }}" class="button-icon m-3"></a>
+                            <a href="" class="image-link-gs mr-4"><img src="{{ url_for('static', filename='icons/RWGPS.png') }}" class="button-icon m-3"></a>
+                            <a href="" class="image-link-gs"><img src="{{ url_for('static', filename='icons/small_instagram.png') }}" class="button-icon m-3"></a>
+                        </div>
+                    </div>
+                    <div class="col-md-2"></div>
+                </div>
+                <div class="row">
+                    <div class="col-12 p-3">
+                        <p class="footer-text text-center copyright"><small>© Copyright Bad Ideas on Bikes - 2020</small></p>
+                    </div>
                 </div>
             </div>
+
 
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
