--- a/flaskbiob/templates/Home.html
+++ b/flaskbiob/templates/Home.html
@@ -30,7 +30,7 @@
             </div>
         </div>
         <div class="col-4 order-2 px-5 border-left d-none d-lg-block pb-3" id="sticky-sidebar">
-            <div class="sticky-top">
+            <div class="sticky-top sticky-offset">
                 <h5>My name is Joe and I’m obsessed with riding bikes</h5>
                 <hr>
                 <p>Bad Ideas on Bikes is very poorly named. It should be called excellent ideas on bikes because riding bikes is excellent and riding bikes stupidly far and up stupidly high or steep hills is excellent… to me. To everyone else it sounds terrible.</p>
