Removed registration link from login page

--- a/flaskbiob/templates/Login.html
+++ b/flaskbiob/templates/Login.html
@@ -52,6 +52,6 @@
         </form>
     </div>
     <div class="border-top pt-3">
-        Need an account? <a class="ml-2" href="{{ url_for('users.registerPage') }}">Sign up now!</a>
+        <small>If you have problems logging in please contact an administrator</small>
     </div>
 {% endblock content %}
