--- a/flaskbiob/templates/Create_Route.html
+++ b/flaskbiob/templates/Create_Route.html
@@ -8,6 +8,20 @@
                     New Route
                 </legend>
                 <div class="form-group">
+                    {{ form.title.label(class="form-control-label") }}
+
+                    {% if form.title.errors %}
+                        {{ form.title(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                            {% for error in form.title.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.title(class="form-control form-control-lg") }}
+                    {% endif %}
+                </div>
+                <div class="form-group">
                     {{ form.region.label(class="form-control-label") }}
 
                     {% if form.region.errors %}
