updated footer links

--- a/flaskbiob/templates/BASE.html
+++ b/flaskbiob/templates/BASE.html
@@ -72,7 +72,7 @@
                         <h6 class="text-center">Pages</h6>
                         <a class="text-light text-decoration-none mr-2" href="{{ url_for('main.homePage') }}">Articles</a>
                         <a class="text-light text-decoration-none mr-2" href="{{ url_for('main.aboutPage') }}">About</a>
-                        <a class="text-light text-decoration-none mr-2" href="">Routes</a>
+                        <a class="text-light text-decoration-none mr-2" href="{{ url_for('routes.routesPage') }}">Routes</a>
                         <a class="text-light" href="">Links</a>
                     </div>
                     <div class="col-md-2"></div>
